--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-gnome-control-center (1:3.11.91-1blankon1) tambora; urgency=medium
+gnome-control-center (1:3.12.0-1blankon1) tambora; urgency=low
 
   * New upstream release
 
- -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Mon, 24 Mar 2014 00:39:09 +0700
+ -- Mahyuddin Idram Ahmad <dotovr@di.blankon.in>  Wed, 26 Mar 2014 23:58:50 +0700
+
+gnome-control-center (1:3.12.0-1) experimental; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Mon, 24 Mar 2014 19:58:34 +0100
 
 gnome-control-center (1:3.11.91-1) experimental; urgency=medium
 
