--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,36 @@
-gnome-control-center (1:3.12.0-1blankon2) tambora; urgency=low
-
-  * debian/patch: 
-    - 101-using-info-blankon-branding.patch 
-
- -- Darian Rizaludin <driantrainman@gmail.com>  Fri, 04 Apr 2014 21:39:08 +0700
-
-gnome-control-center (1:3.12.0-1blankon1) tambora; urgency=low
+gnome-control-center (1:3.12.1-3blankon1) tambora; urgency=low
 
   * New upstream release
+  * Added patches: 101-using-info-blankon-branding.patch
 
- -- Mahyuddin Idram Ahmad <dotovr@di.blankon.in>  Wed, 26 Mar 2014 23:58:50 +0700
+ -- Mahyuddin <yudi.al@gmail.com>  Sat, 14 Jun 2014 21:30:49 +0700
+
+gnome-control-center (1:3.12.1-3) experimental; urgency=medium
+
+  * debian/control.in:
+    Add recommends to libnss-myhostname (Closes: #705319)
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 27 Apr 2014 18:20:29 +0200
+
+gnome-control-center (1:3.12.1-2) experimental; urgency=medium
+
+  [ Josselin Mouette ]
+  * Remove Suggests on screensavers.
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 27 Apr 2014 10:14:45 +0200
+
+gnome-control-center (1:3.12.1-1) experimental; urgency=medium
+
+  [ Laurent Bigonville]
+  * New upstream release.
+    - Add libkrb5-dev to the build-dependencies
+    - Re-add libgnome-bluetooth-dev build-dependency
+  * debian/control.in: Bump Standards-Version to 3.9.5 (no further changes)
+
+  [ Sjoerd Simons ]
+  * Re-add gnome-bluetooth support
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 26 Apr 2014 18:41:34 +0200
 
 gnome-control-center (1:3.12.0-1) experimental; urgency=medium
 
