--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,27 @@
-gnome-control-center (1:3.12.1-3blankon1) tambora; urgency=low
+gnome-control-center (1:3.12.1-4blankon1) tambora; urgency=medium
 
-  * New upstream release
-  * Added patches: 101-using-info-blankon-branding.patch
+  * debian/patches:
+    - 101-using-info-blankon-branding.patch
 
- -- Mahyuddin <yudi.al@gmail.com>  Sat, 14 Jun 2014 21:30:49 +0700
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Fri, 18 Jul 2014 20:08:25 +0700
+
+gnome-control-center (1:3.12.1-4) unstable; urgency=medium
+
+  [ Laurent Bigonville ]
+  * debian/control.in: Recommends realmd package
+
+  [ Emilio Pozuelo Monfort ]
+  * debian/control.in:
+    + Drop duplicate libgnome-bluetooth-dev build dependency.
+
+  [ Andreas Henriksson ]
+  * Bump dependency on gsettings-desktop-schemas to >= 3.9.91
+    - build-dependency already set to this version.
+    - needed for newly added datetime schema
+    (Closes: #752569)
+  * Upload to unstable.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Mon, 14 Jul 2014 23:49:42 +0200
 
 gnome-control-center (1:3.12.1-3) experimental; urgency=medium
 
