--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gnome-control-center (1:3.12.1-4blankon3) tambora; urgency=medium
+
+  * added debian/patch:
+    - 06_handle_passwd_with_ldap.patch
+
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Mon, 21 Jul 2014 04:18:54 +0700
+
 gnome-control-center (1:3.12.1-4blankon2) tambora; urgency=medium
 
   * re-patch:
