--- a/debian/changelog
+++ b/debian/changelog
@@ -1,23 +1,26 @@
-gnome-control-center (1:3.12.1-4blankon3) tambora; urgency=medium
+gnome-control-center (1:3.12.1-5+blankon1) tambora; urgency=medium
 
-  * added debian/patch:
-    - 06_handle_passwd_with_ldap.patch
+  * New upstream release
 
- -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Mon, 21 Jul 2014 04:18:54 +0700
+ -- mijortsa <azis.astrojim@mahadev.di.blankon.in>  Sat, 20 Sep 2014 06:36:48 +0700
 
-gnome-control-center (1:3.12.1-4blankon2) tambora; urgency=medium
+gnome-control-center (1:3.12.1-5) unstable; urgency=medium
 
-  * re-patch:
-    - 101-using-info-blankon-branding.patch
+  [ Jordi Mallach ]
+  * Add cracklib-runtime to Recommends, it's needed for password changing.
 
- -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Mon, 21 Jul 2014 03:26:56 +0700
+  [ Laurent Bigonville ]
+  * Add debian/patches/07_polkit_wheel_sudo_group.patch: The "wheel" group is
+    not existing on debian, check if the user is member of the "sudo" group
+    instead (Closes: #760722)
 
-gnome-control-center (1:3.12.1-4blankon1) tambora; urgency=medium
+  [ Andreas Henriksson ]
+  * Update debian/gnome-control-center.pkla with what is currently listed
+    in upstreams panels/common/gnome-control-center.rules since we don't yet
+    have/depend-on policykit-1 >= 0.106 which means the rules file is still
+    unused. This fixes automatic time/timezone, etc.
 
-  * debian/patches:
-    - 101-using-info-blankon-branding.patch
-
- -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Fri, 18 Jul 2014 20:08:25 +0700
+ -- Laurent Bigonville <bigon@debian.org>  Sun, 07 Sep 2014 12:31:59 +0200
 
 gnome-control-center (1:3.12.1-4) unstable; urgency=medium
 
