--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,39 @@
-gnome-control-center (1:3.14.0-1blankon1) tambora; urgency=medium
+gnome-control-center (1:3.14.2-3blankon1) tambora; urgency=medium
 
-  * New upstream release
+  * Upstream release
 
- -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Wed, 24 Sep 2014 13:52:42 +0700
+ -- Mijortsa <azis.astrojim@surabaya.di.blankon.in>  Sat, 04 Apr 2015 23:10:57 +0700
+
+gnome-control-center (1:3.14.2-3) unstable; urgency=medium
+
+  * Re-add system-config-printer recommendation. (Closes: #774257)
+    - it's still needed to be able to add new printers.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Thu, 05 Feb 2015 19:44:41 +0100
+
+gnome-control-center (1:3.14.2-2) unstable; urgency=medium
+
+  * Remove system-config-printer recommendation.
+
+ -- Josselin Mouette <joss@debian.org>  Sun, 30 Nov 2014 14:38:52 +0100
+
+gnome-control-center (1:3.14.2-1) unstable; urgency=medium
+
+  * New upstream translation and bugfix release.
+    + Disables SSLv3 because POODLE.
+  * 30_stack_overflow.patch: patch from upstream git. Prevents stack 
+    overflow in sharing panel.
+  * 31_printers_border.patch: patch from upstream git. Removes unwanted 
+    border around printer model name.
+
+ -- Josselin Mouette <joss@debian.org>  Sun, 30 Nov 2014 11:08:12 +0100
+
+gnome-control-center (1:3.14.1-1) unstable; urgency=medium
+
+  * New upstream release.
+  * debian/control.in: Bump Standards-Version to 3.9.6 (no further changes)
+
+ -- Laurent Bigonville <bigon@debian.org>  Sat, 18 Oct 2014 01:35:32 +0200
 
 gnome-control-center (1:3.14.0-1) unstable; urgency=medium
 
