--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+gnome-control-center (1:3.14.4-1blankon1) tambora; urgency=medium
+
+  * New upstream release 
+
+ -- Mahyuddin <yudi.al@gmail.com>  Wed, 29 Apr 2015 13:36:57 +0700
+
+gnome-control-center (1:3.14.4-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Update patches.
+
+ -- Michael Biebl <biebl@debian.org>  Mon, 27 Apr 2015 16:35:53 +0200
+
 gnome-control-center (1:3.14.2-3blankon5) tambora; urgency=medium
 
   * Added patch git_remove_checking_networkmanager_version.patch 
