--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.16.1-0blankon3) tambora; urgency=medium
+
+  * Added Blankon Logo (OI) 
+
+ -- Mahyuddin <yudi.al@gmail.com>  Sun, 31 May 2015 23:07:07 +0700
+
 gnome-control-center (1:3.16.1-0blankon2) tambora; urgency=medium
 
   * Disable patches:
