--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.16.1-0blankon5) tambora; urgency=medium
+
+  * Drop patch region-language 
+
+ -- Mahyuddin <yudi.al@gmail.com>  Wed, 10 Jun 2015 13:54:11 +0700
+
 gnome-control-center (1:3.16.1-0blankon4) tambora; urgency=medium
 
   * Rebuild 
