--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.20.1-2blankon2) tambora; urgency=medium
+
+  * Bump version B-d libgrilo-0.3-dev 
+
+ -- dotovr <dotovr@preko>  Tue, 07 Jun 2016 18:30:28 +0700
+
 gnome-control-center (1:3.20.1-2blankon1) tambora; urgency=low
 
   * New upstream release
