--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.20.1-2blankon3) tambora; urgency=medium
+
+  * Add patch
+
+ -- Syai Mif <syaimif@di.blankon.in>  Mon, 13 Jun 2016 20:56:28 +0700
+
 gnome-control-center (1:3.20.1-2blankon2) tambora; urgency=medium
 
   * Bump version B-d libgrilo-0.3-dev 
