--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.22.2-3blankon3) uluwatu; urgency=medium
+
+  * Fixed syntax error in depends
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Sat, 12 Aug 2017 18:52:26 +0800
+
 gnome-control-center (1:3.22.2-3blankon2) uluwatu; urgency=medium
 
   * Rebuild
