--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.22.2-3blankon4) uluwatu; urgency=medium
+
+  * Remove linux-any in depends"
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Sat, 12 Aug 2017 19:13:44 +0800
+
 gnome-control-center (1:3.22.2-3blankon3) uluwatu; urgency=medium
 
   * Fixed syntax error in depends
