--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.22.2-3blankon5) uluwatu; urgency=medium
+
+  * Add blankon-gnome-version.patch
+
+ -- AnTo SamalonA <antosamalona@masDell>  Wed, 16 Aug 2017 17:48:44 +0800
+
 gnome-control-center (1:3.22.2-3blankon4) uluwatu; urgency=medium
 
   * Remove linux-any in depends"
