--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.22.2-3blankon7) uluwatu; urgency=medium
+
+  * Fixed control file
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Wed, 16 Aug 2017 20:39:13 +0800
+
 gnome-control-center (1:3.22.2-3blankon6) uluwatu; urgency=medium
 
   * Rebuild
