--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.22.2-3blankon8) uluwatu; urgency=medium
+
+  * Replace logo
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Tue, 22 Aug 2017 15:51:02 +0800
+
 gnome-control-center (1:3.22.2-3blankon7) uluwatu; urgency=medium
 
   * Fixed control file
