--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.22.2-3blankon9) uluwatu; urgency=medium
+
+  * Add path in gnome-control-center-data.install
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Tue, 12 Sep 2017 06:05:07 +0800
+
 gnome-control-center (1:3.22.2-3blankon8) uluwatu; urgency=medium
 
   * Replace logo
