--- a/debian/changelog
+++ b/debian/changelog
@@ -1,56 +1,24 @@
-gnome-control-center (1:3.22.2-3blankon9) uluwatu; urgency=medium
-
-  * Add path in gnome-control-center-data.install
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Tue, 12 Sep 2017 06:05:07 +0800
-
-gnome-control-center (1:3.22.2-3blankon8) uluwatu; urgency=medium
-
-  * Replace logo
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Tue, 22 Aug 2017 15:51:02 +0800
-
-gnome-control-center (1:3.22.2-3blankon7) uluwatu; urgency=medium
-
-  * Fixed control file
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Wed, 16 Aug 2017 20:39:13 +0800
-
-gnome-control-center (1:3.22.2-3blankon6) uluwatu; urgency=medium
-
-  * Rebuild
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Wed, 16 Aug 2017 18:04:20 +0800
-
-gnome-control-center (1:3.22.2-3blankon5) uluwatu; urgency=medium
-
-  * Add blankon-gnome-version.patch
-
- -- AnTo SamalonA <antosamalona@masDell>  Wed, 16 Aug 2017 17:48:44 +0800
-
-gnome-control-center (1:3.22.2-3blankon4) uluwatu; urgency=medium
-
-  * Remove linux-any in depends"
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Sat, 12 Aug 2017 19:13:44 +0800
-
-gnome-control-center (1:3.22.2-3blankon3) uluwatu; urgency=medium
-
-  * Fixed syntax error in depends
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Sat, 12 Aug 2017 18:52:26 +0800
-
-gnome-control-center (1:3.22.2-3blankon2) uluwatu; urgency=medium
-
-  * Rebuild
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Fri, 11 Aug 2017 22:29:54 +0800
-
-gnome-control-center (1:3.22.2-3blankon1) uluwatu; urgency=medium
+gnome-control-center (1:3.24.3-1blankon1) uluwatu; urgency=medium
 
   * New upstream release
-    - Add blankon patches
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Fri, 11 Aug 2017 19:48:48 +0800
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Tue, 26 Sep 2017 15:42:21 +0800
+
+gnome-control-center (1:3.24.3-1) unstable; urgency=medium
+
+  [ Laurent Bigonville ]
+  * New upstream release.
+    - Drop d/p/git_allow_empty_ip4_gateway.patch and
+      d/p/info-Do-not-crash-if-Renderer-is-not-set-by-SessionM.patch, applied
+      upstream
+    - debian/control.in: Bump (build-)dependencies
+
+  [ Jeremy Bicha ]
+  * debian/control.in:
+    - Bump minimum gnome-settings-daemon to 3.23.90
+  * Bump Standards-Version to 4.1.0
+
+ -- Laurent Bigonville <bigon@debian.org>  Wed, 30 Aug 2017 02:01:50 +0200
 
 gnome-control-center (1:3.22.2-3) unstable; urgency=medium
 
