--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.24.3-1blankon2) uluwatu; urgency=medium
+
+  * Add cdbs in build-depends
+
+ -- AnTo SamalonA <ansamssoftdev@gmail.com>  Thu, 28 Sep 2017 06:29:01 +0800
+
 gnome-control-center (1:3.24.3-1blankon1) uluwatu; urgency=medium
 
   * New upstream release
