--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.24.3-1blankon4) uluwatu; urgency=medium
+
+  * Drop old patches and add new one
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Sat, 30 Sep 2017 20:33:50 +0800
+
 gnome-control-center (1:3.24.3-1blankon3) uluwatu; urgency=medium
 
   * Add patches
