--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-control-center (1:3.24.3-1blankon6) experimental; urgency=medium
+
+  * Add BlankOn logo
+
+ -- Herpiko Dwi Aguno <ansamsoftdev@gmail.com>  Tue, 03 Oct 2017 01:38:58 +0800
+
 gnome-control-center (1:3.24.3-1blankon5) uluwatu; urgency=medium
 
   * Change rule file
